--- a/src/Pages/Service/Service.css
+++ b/src/Pages/Service/Service.css
@@ -6,25 +6,23 @@
   letter-spacing: 0.15em;
   color: #2397cd;
 }
-
 .card-img-top {
   height: 295px;
 }
-.card-text{
-    font-weight: 400;
-font-size: 15px;
-line-height: 28px;
-letter-spacing: 0.15em;
-
-color: #000633;
+.card-text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  letter-spacing: 0.15em;
+  color: #000633;
 }
-.service button{
-    background: #2397CD;
-    padding: 10px 70px;
-    font-weight: 600;
-    font-size: 22px;
-    letter-spacing: 0.15em;
-    color: #fff;
-    border: none;
-    border-radius: 50px;
+.service button {
+  background: #2397cd;
+  padding: 10px 70px;
+  font-weight: 600;
+  font-size: 22px;
+  letter-spacing: 0.15em;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
 }
