--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -5,18 +5,17 @@
 .login h2 {
   font-family: "Montserrat", sans-serif;
   text-align: center;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   letter-spacing: 0.15em;
   color: #0096c7;
-  font-weight: 600;
-  font-size: 37px;
-  line-height: 54px;
+  font-weight: 800;
+  font-size: 23px;
+  line-height: 38px;
   text-transform: uppercase;
 }
 .login p {
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
+  font-weight: 500;
+  font-size: 10px;
   text-align: center;
   letter-spacing: 0.15em;
   margin-top: 20px;
@@ -44,16 +43,14 @@
   font-weight: 300;
   font-size: 32px;
   line-height: 39px;
-
   letter-spacing: -0.05em;
-
   color: #212121;
 }
 .login-input {
   background-color: white;
   width: 450px;
   padding: 20px 20px 25px 20px;
-  
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .input-password {
   position: relative;
